--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,78 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-06-30 20:04:34 -0400 
+%% Created for Yuka Fujii at 2015-07-28 13:07:49 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{stevens2005,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2005MNRAS.356.1053S},
+	Author = {{Stevens}, I.~R.},
+	Date-Added = {2015-07-28 04:07:40 +0000},
+	Date-Modified = {2015-07-28 04:07:46 +0000},
+	Doi = {10.1111/j.1365-2966.2004.08528.x},
+	Eprint = {astro-ph/0410600},
+	Journal = {\mnras},
+	Keywords = {radiation mechanisms: non-thermal, stars: coronae, stars: late-type, planetary systems, solar neighbourhood},
+	Month = jan,
+	Pages = {1053-1063},
+	Title = {{Magnetospheric radio emission from extrasolar giant planets: the role of the host stars}},
+	Volume = 356,
+	Year = 2005,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1111/j.1365-2966.2004.08528.x}}
+
+@article{jardine2008,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2008A%26A...490..843J},
+	Archiveprefix = {arXiv},
+	Author = {{Jardine}, M. and {Collier Cameron}, A.},
+	Date-Added = {2015-07-28 03:59:50 +0000},
+	Date-Modified = {2015-07-28 04:00:01 +0000},
+	Doi = {10.1051/0004-6361:20078658},
+	Eprint = {0808.2889},
+	Journal = {\aap},
+	Keywords = {stars: planetary systems},
+	Month = nov,
+	Pages = {843-851},
+	Title = {{Radio emission from exoplanets: the role of the stellar coronal density and magnetic field strength}},
+	Volume = 490,
+	Year = 2008,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20078658}}
+
+@article{blackett1947,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1947Natur.159..658B},
+	Author = {{Blackett}, P.~M.~S.},
+	Date-Added = {2015-07-27 06:24:34 +0000},
+	Date-Modified = {2015-07-27 06:25:11 +0000},
+	Doi = {10.1038/159658a0},
+	Journal = {\nat},
+	Month = may,
+	Pages = {658-666},
+	Title = {{The Magnetic Field of Massive Rotating Bodies}},
+	Volume = 159,
+	Year = 1947,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/159658a0}}
+
+@article{desch1984,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1984JGR....89.6819D},
+	Author = {{Desch}, M.~D. and {Barrow}, C.~H.},
+	Date-Added = {2015-07-26 12:59:39 +0000},
+	Date-Modified = {2015-07-26 12:59:46 +0000},
+	Doi = {10.1029/JA089iA08p06819},
+	Journal = {\jgr},
+	Keywords = {Jupiter (Planet), Planetary Radiation, Radio Astronomy, Solar Planetary Interactions, Solar Wind, Autocorrelation, Cross Correlation, Decametric Waves, Io, Plasma Density, Radio Spectra, Voyager 1 Spacecraft, Voyager 2 Spacecraft, JUPITER, SOLAR WIND, HECTOMETER WAVES, RADIO WAVES, EMISSIONS, PRA, WAVELENGTHS, VOYAGER 1, VOYAGER 2, OBSERVATIONS, PLASMAS, DENSITY, PERIODICITY, SOURCE, ORIGIN, EARTH-BASED OBSERVATIONS, COMPARISONS, MAGNETIC PROPERTIES, STRUCTURE, PLANETARY RADIO ASTRONOMY EXPERIMENT},
+	Month = aug,
+	Pages = {6819-6823},
+	Title = {{Direct evidence for solar wind control of Jupiter's hectometer-wavelength radio emission}},
+	Volume = 89,
+	Year = 1984,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1029/JA089iA08p06819}}
 
 @article{ignace2010,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
