--- a/ms.tex
+++ b/ms.tex
@@ -733,11 +733,11 @@ As this figure indicates, even if the radio emission from the red giant itself h
 Therefore, in the following, we ignore the radio emission from the red giant as a noise source. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure}[htbp]
-   \plotoneh{cartoon2.pdf}
+\begin{figure*}[tbp]
+   \plotonesc{cartoon2.pdf}
    \caption{A cartoon of radio emission spectra of a RGHJ with 10$M_J$ and the host red giants with 100 $R_{\odot }$. The spectrum of RGHJ is modeled after Jovian radio spectra \citep[e.g.][]{zarka_et_al2004}, while that of the host red giant is obtained simply by extrapolating observed radio spectra above 1~GHz with power law. }
   \label{fig:cartoon}
-\end{figure}
+\end{figure*}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 
