removed number from top line of thermal spectrum equation

--- a/ms.tex
+++ b/ms.tex
@@ -722,7 +722,7 @@ Above 1~GHz, there are several observations. For example, \citet{gorman2013} rep
 We estimate the thermal radio flux from the host star to be consistent with these observed data and by extrapolating to the lower frequency range with a simple power law:
 %%%
 \begin{eqnarray}
-f_{\star }(\nu ) &\sim & (0.4-1.375) \times 10^{-3} ~\mbox{Jy} \\
+\nonumber f_{\star }(\nu ) &\sim & (0.4-1.375) \times 10^{-3} ~\mbox{Jy} \\
 && \times \left( \frac{d}{10 ~\mbox{pc}} \right)^{-2}  \left( \frac{R_{\star }}{100 R_{\odot }} \right)^2 \left( \frac{\nu}{1~\mbox{GHz}} \right)^{\alpha } 
 \end{eqnarray}
 %%%
