--- a/code/estimate_table_values.ipynb
+++ b/code/estimate_table_values.ipynb
@@ -267,23 +267,28 @@
     "$$\n",
     "\n",
     "TODO:  \n",
-    "replace $\\theta$ with $\\lambda / D$ and express in $\\nu$ and $D$, and multiply by 5 for crude estimate of $5\\sigma$.\n",
+    "replace $\\theta$ with $\\lambda / D$ and express in $\\nu$ and $D$, and multiply by 5 for crude estimate of $5\\sigma$.  \n",
+    "Wait, should it actually be $\\lambda / b_{\\rm max}$??  \n",
+    "I'm going to go with that.\n",
     "\n",
     "\\begin{eqnarray}\n",
-    "5 \\sigma & \\sim {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} \\left( \\frac{\\lambda / D}{1'} \\frac{60'}{1^\\circ} \\frac{180^\\circ}{\\pi \\rm~radians} \\right)^2 \\\\\\\n",
-    " & = 1.18 \\times 10^7 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} \\left( \\frac{\\lambda}{D} \\right)^2 \\\\\\\n",
-    " & = 1.18 \\times 10^7 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} \\left( \\lambda \\right)^2 \\left( D \\right)^{-2} \\\\\\\n",
-    " & = 1.18 \\times 10^7 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} \\left( c / \\nu \\right)^2 \\left( D \\right)^{-2} \\\\\\\n",
+    "5 \\sigma & \\sim {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} \\left( \\frac{\\lambda / b_{\\rm max}}{1'} \\frac{60'}{1^\\circ} \\frac{180^\\circ}{\\pi \\rm~radians} \\right)^2 \\\\\\\n",
+    " & = 1.18 \\times 10^7 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} \\left( \\frac{\\lambda}{b_{\\rm max}} \\right)^2 \\\\\\\n",
+    " & = 1.18 \\times 10^7 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} \\left( \\lambda \\right)^2 \\left( b_{\\rm max} \\right)^{-2} \\\\\\\n",
+    " & = 1.18 \\times 10^7 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} \\left( c / \\nu \\right)^2 \\left( b_{\\rm max} \\right)^{-2} \\\\\\\n",
     " & = 1.06 \\times 10^{17} {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} {\\rm~m^2~s^{-2}} \\left( \\nu \\right)^{-2} \\left( D \\right)^{-2} \\\\\\\n",
-    " & = 1.06 \\times 10^{17} {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} {\\rm~m^2~s^{-2}} \\left(10^9 \\rm~Hz \\right)^{-2} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{-2} \\left( D \\right)^{-2} \\\\\\\n",
-    " & = 0.106 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} {\\rm~m^2} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{-2} \\left( D \\right)^{-2} \\\\\\\n",
-    " & = 0.106 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{-1.3} {\\rm~m^2} ({4 \\rm~m})^{-2} \\left( \\frac{D}{4 \\rm~m} \\right)^{-2} \\\\\\\n",
-    " & = 0.0066 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{-1.3} \\left( \\frac{D}{4 \\rm~m} \\right)^{-2} \\\\\\\n",
-    " & = 0.078 {\\rm~Jy} \\left( \\frac{\\nu}{150 \\rm~MHz} \\right)^{-1.3} \\left( \\frac{D}{4 \\rm~m} \\right)^{-2} \\\\\\\n",
-    " & = 0.21 {\\rm~Jy} \\left( \\frac{\\nu}{70 \\rm~MHz} \\right)^{-1.3} \\left( \\frac{D}{4 \\rm~m} \\right)^{-2} \\\\\\\n",
+    " & = 1.06 \\times 10^{17} {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} {\\rm~m^2~s^{-2}} \\left(10^9 \\rm~Hz \\right)^{-2} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{-2} \\left( b_{\\rm max} \\right)^{-2} \\\\\\\n",
+    " & = 0.106 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{0.7} {\\rm~m^2} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{-2} \\left( b_{\\rm max} \\right)^{-2} \\\\\\\n",
+    " & = 0.106 {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{-1.3} {\\rm~m^2} ({1000 \\rm~m})^{-2} \\left( \\frac{b_{\\rm max}}{1000 \\rm~m} \\right)^{-2} \\\\\\\n",
+    " & = 1.06 \\times 10^{-7} {\\rm~Jy} \\left( \\frac{\\nu}{1 \\rm~GHz} \\right)^{-1.3} \\left( \\frac{b_{\\rm max}}{1000 \\rm~m} \\right)^{-2} \\\\\\\n",
+    " & = 1.06 \\times 10^{-6} {\\rm~Jy} \\left( \\frac{\\nu}{150 \\rm~MHz} \\right)^{-1.3} \\left( \\frac{b_{\\rm max}}{1000 \\rm~m} \\right)^{-2} \\\\\\\n",
+    " & = 3.36 \\times 10^{-6} {\\rm~Jy} \\left( \\frac{\\nu}{70 \\rm~MHz} \\right)^{-1.3} \\left( \\frac{b_{\\rm max}}{1000 \\rm~m} \\right)^{-2} \\\\\\\n",
     "\\end{eqnarray}\n",
     "\n",
-    "\n",
+    "I just did this in terms of $\\lambda/D$, but should it actually have been in terms of $\\lambda / b_{\\rm max}$???  I think so... If so, it turns into:\n",
+    "$$\n",
+    "5\\sigma = 0.21 {\\rm~Jy} \\left( \\frac{\\nu}{70 \\rm~MHz} \\right)^{-1.3} \\left( \\frac{D}{1000 \\rm~m} \\right)^{-2}\n",
+    "$$\n",
     "dense limit applies to GMRT?, HERA, LOFAR, MWA, SKA, VLA?, LWA\n",
     "\n",
     "configuration A for VLA to maximize resolution."
