Figure 5 is updated ---now includes further systems

--- a/ms.tex
+++ b/ms.tex
@@ -754,7 +754,7 @@ Therefore, in the following, we ignore the radio emission from the red giant as 
 %   \plotoneh{radio_5Mp_5AU.pdf}
 %   \plotoneh{radio_2Mp_4-5Gyr.pdf}
 %   \plotoneh{radio_4Mp_4-5Gyr.pdf}   
-   \caption{Radio emission from existing M-type red giants with a hypothetical planetary companion of 1$M_J$, 2$M_J$, and 4$M_J$ at 1 AU and 5AU. Cross symbols indicate that the radio emission is not observable because cyclotron frequency is less than plasma density around the planet. }
+   \caption{Radio emission from existing M-type red giants with a hypothetical planetary companion of 1$M_J$ and 10$M_J$ at 1 AU and 5AU. Cross symbols indicate that the radio emission is not observable because cyclotron frequency is less than plasma density around the planet. }
   \label{fig:observability}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
