--- a/code/estimate_table_values.ipynb
+++ b/code/estimate_table_values.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +110,7 @@
        "      <th>2</th>\n",
        "      <td>lofar_lba</td>\n",
        "      <td>35.00</td>\n",
-       "      <td>100</td>\n",
+       "      <td>100000</td>\n",
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -124,7 +124,7 @@
        "      <th>4</th>\n",
        "      <td>ska</td>\n",
        "      <td>1.75</td>\n",
-       "      <td>65</td>\n",
+       "      <td>65000</td>\n",
        "      <td>130000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -138,7 +138,7 @@
        "      <th>6</th>\n",
        "      <td>lwa</td>\n",
        "      <td>2.00</td>\n",
-       "      <td>100</td>\n",
+       "      <td>100000</td>\n",
        "      <td>256</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -149,14 +149,14 @@
        "   telescope  dish_diam_m  max_baseline_m  num_antennas\n",
        "0       gmrt        45.00           25000            30\n",
        "1       hera        14.00            1000           350\n",
-       "2  lofar_lba        35.00             100            44\n",
+       "2  lofar_lba        35.00          100000            44\n",
        "3        mwa         4.00            1000           128\n",
-       "4        ska         1.75              65        130000\n",
+       "4        ska         1.75           65000        130000\n",
        "5        vla        25.00           36000            29\n",
-       "6        lwa         2.00             100           256"
+       "6        lwa         2.00          100000           256"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -189,15 +189,15 @@
     {
      "data": {
       "text/plain": [
-       "{'gmrt': {'dish_diam_m': 45.0, 'max_baseline_m': nan, 'num_antennas': 30.0},\n",
-       " 'hera': {'dish_diam_m': 14.0,\n",
-       "  'max_baseline_m': 1000.0,\n",
-       "  'num_antennas': 350.0},\n",
-       " 'lofar': {'dish_diam_m': 35.0, 'max_baseline_m': nan, 'num_antennas': nan},\n",
-       " 'lwa': {'dish_diam_m': 2.0, 'max_baseline_m': 100.0, 'num_antennas': 256.0},\n",
-       " 'mwa': {'dish_diam_m': 4.0, 'max_baseline_m': nan, 'num_antennas': 128.0},\n",
-       " 'ska': {'dish_diam_m': nan, 'max_baseline_m': nan, 'num_antennas': nan},\n",
-       " 'vla': {'dish_diam_m': 25.0, 'max_baseline_m': nan, 'num_antennas': 29.0}}"
+       "{'gmrt': {'dish_diam_m': 45.0, 'max_baseline_m': 25000, 'num_antennas': 30},\n",
+       " 'hera': {'dish_diam_m': 14.0, 'max_baseline_m': 1000, 'num_antennas': 350},\n",
+       " 'lofar_lba': {'dish_diam_m': 35.0,\n",
+       "  'max_baseline_m': 100000,\n",
+       "  'num_antennas': 44},\n",
+       " 'lwa': {'dish_diam_m': 2.0, 'max_baseline_m': 100000, 'num_antennas': 256},\n",
+       " 'mwa': {'dish_diam_m': 4.0, 'max_baseline_m': 1000, 'num_antennas': 128},\n",
+       " 'ska': {'dish_diam_m': 1.75, 'max_baseline_m': 65000, 'num_antennas': 130000},\n",
+       " 'vla': {'dish_diam_m': 25.0, 'max_baseline_m': 36000, 'num_antennas': 29}}"
       ]
      },
      "execution_count": 5,
@@ -285,10 +285,6 @@
     " & = 3.36 \\times 10^{-6} {\\rm~Jy} \\left( \\frac{\\nu}{70 \\rm~MHz} \\right)^{-1.3} \\left( \\frac{b_{\\rm max}}{1000 \\rm~m} \\right)^{-2} \\\\\\\n",
     "\\end{eqnarray}\n",
     "\n",
-    "I just did this in terms of $\\lambda/D$, but should it actually have been in terms of $\\lambda / b_{\\rm max}$???  I think so... If so, it turns into:\n",
-    "$$\n",
-    "5\\sigma = 0.21 {\\rm~Jy} \\left( \\frac{\\nu}{70 \\rm~MHz} \\right)^{-1.3} \\left( \\frac{D}{1000 \\rm~m} \\right)^{-2}\n",
-    "$$\n",
     "dense limit applies to GMRT?, HERA, LOFAR, MWA, SKA, VLA?, LWA\n",
     "\n",
     "configuration A for VLA to maximize resolution."
@@ -296,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
