--- a/ms.tex
+++ b/ms.tex
@@ -591,7 +591,7 @@ Depending on the modeling of magnetic field strength, there is also a speculatio
 %\memoYF{This is based on theoretical prediction by \citet{griesmeier2004} that the tidally-locked planets have weaker magnetic field due to slow spin rotation. }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\begin{table}[htdp]
+%\begin{table}[htp]
 %\caption{Canonical Parameters of 2 types of hot jupiters.}
 %\begin{center}
 %\begin{tabular}{c|cccc} \hline \hline
@@ -797,26 +797,26 @@ The difference of the symbols indicates whether the radio emission can escape fr
 \memoYF{discussion about detectability... Figures 1-3 of \citet{griesmeier2007b} show $10^{-3}$ Jy limit for 10-100 MHz (LWA, LOFAR) and $10^{-5}-10^{-4}$ Jy for 100-1000 MHz (LOFAR, SKA). }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{table*}[htdp]
+\begin{table*}[htp]
 \caption{Detectability of Hot Jupiters with Current and Future Radio Telescopes.}
 \begin{center}
 \begin{tabular}{c|ccccc} \hline \hline\\[-0.5pc]
-Instrument & Band & Sensitivity & Time  & Resolution & Confusion limit\\[.25pc]
- &  & $\mu$Jy~hr$^{1/2}$ &  hr & \arcsec\ & $\mu$Jy \\[0.25pc] 
+Instrument & Band & Sensitivity & Time  & Resolution & Confusion limit\\
+ & MHz & $\mu$Jy~hr$^{1/2}$ &  hr & \arcsec\ & $\mu$Jy \\[0.25pc] 
 \hline\\[-0.5pc]
 %ASKAP & 700-1700~MHz & 37 & 342.3 \\ % table 3 of http://www.atnf.csiro.au/projects/askap/config.html
 GMRT  & 235~MHz &  165.6 & 6860 & 13 \\ % http://gmrt.ncra.tifr.res.in/~astrosupp/obs_setup/sensitivity.html
 HERA  & 70~MHz  &  &  \\ % http://reionization.org/wp-content/uploads/2015/05/HERA0_imaging.pdf
 % https://www.astron.nl/~heald/test/sens.php; 
 % 24 core stations, 16 remote, 8 international, 488 subbands
-LOFAR & ~45~MHz  &  833!! &  &  & \\
-LOFAR & ~60~MHz  &  648!! &  &  & \\
-LOFAR & 120~MHz  &  51.73 &  &  & \\  
-LOFAR & 150~MHz  &  40.97 &  &  & \\  
-LWA   & ~70~MHz  &  &  \\
-SKA   & 200~MHz  &  &  \\
+LOFAR & ~45  &  833!! &  &  & \\
+LOFAR & ~60  &  648!! &  &  & \\
+LOFAR & 120  &  51.73 &  &  & \\  
+LOFAR & 150  &  40.97 &  &  & \\  
+LWA   & ~70  &  &  \\
+SKA   & 200  &  &  \\
 UTR-2 & & & \\
-VLA P-band & (270-470~MHz)  & 138  & 4760 & \\
+VLA P-band & 270-470  & 138  & 4760 & \\
 \hline
 \end{tabular}
 \end{center}
@@ -1024,7 +1024,7 @@ Aside from this common part, the differences originate mainly from:
 As for i., ii. and iii., the scaling laws are summarized in Table \ref{tab:comp}. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{table*}[htdp]
+\begin{table*}[htp]
 \caption{Comparison for assumed scaling relationships.}
 \begin{center}
 \begin{tabular}{c|l|llcc} \hline \hline
