cartoon is modified to ignore Io-DAM based on griesmeier 2007

--- a/ms.tex
+++ b/ms.tex
@@ -734,8 +734,8 @@ Therefore, in the following, we ignore the radio emission from the red giant as 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[tbp]
-   \plotonesc{cartoon2.pdf}
-   \caption{A cartoon of radio emission spectra of a RGHJ with 10$M_J$ and the host red giants with 100 $R_{\odot }$. The spectrum of RGHJ is modeled after Jovian radio spectra \citep[e.g.][]{zarka_et_al2004}, while that of the host red giant is obtained simply by extrapolating observed radio spectra above 1~GHz with power law. }
+   \plotonesc{fig5_10Mj_2.pdf}
+   \caption{A cartoon of radio emission spectra of a RGHJ with 10$M_J$ and the host red giants with 100 $R_{\odot }$. The spectrum of RGHJ is modeled after Jovian radio spectra, e.g. figure 8 of \citet{zarka_et_al2004} and figure 2 of \citet{griesmeier2007a}; contribution from Io is not shown here. The spectra of the host red giant are modeled simply by extrapolating observed radio spectra above 1~GHz with power law. }
   \label{fig:cartoon}
 \end{figure*}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
