cleaned up confusion notebook a bit.

--- a/code/estimate_table_values.ipynb
+++ b/code/estimate_table_values.ipynb
@@ -6,17 +6,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Value error parsing header in AFM: UnderlinePosition -133\r",
-      "UnderlineThickness 20\r",
-      "Version 7.000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -26,7 +16,7 @@
     "NU_FIDUCIAL = 70.0e6 # 70 MHz\n",
     "DURATION = 3600. # 3600 seconds\n",
     "kB = 1.38e-16 # in cgs\n",
-    "cc = 3.e10  # in cgs"
+    "cc = 3.0e10  # in cgs"
    ]
   },
   {
@@ -101,7 +91,7 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -219,7 +209,7 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -230,7 +220,7 @@
        "      <th>num_antennas</th>\n",
        "      <th>bandwidth_MHz</th>\n",
        "      <th>rms_Jy</th>\n",
-       "      <th>theta_res</th>\n",
+       "      <th>theta_res_asec</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -242,7 +232,7 @@
        "      <td>30</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000378</td>\n",
-       "      <td>35.336108</td>\n",
+       "      <td>35.359681</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -252,7 +242,7 @@
        "      <td>350</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000330</td>\n",
-       "      <td>883.402699</td>\n",
+       "      <td>883.992027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -262,7 +252,7 @@
        "      <td>44</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000424</td>\n",
-       "      <td>8.834027</td>\n",
+       "      <td>8.839920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -272,7 +262,7 @@
        "      <td>128</td>\n",
        "      <td>50</td>\n",
        "      <td>0.011076</td>\n",
-       "      <td>883.402699</td>\n",
+       "      <td>883.992027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -282,7 +272,7 @@
        "      <td>130000</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>13.590811</td>\n",
+       "      <td>13.599877</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -292,7 +282,7 @@
        "      <td>29</td>\n",
        "      <td>50</td>\n",
        "      <td>0.001269</td>\n",
-       "      <td>24.538964</td>\n",
+       "      <td>24.555334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -302,7 +292,7 @@
        "      <td>256</td>\n",
        "      <td>50</td>\n",
        "      <td>0.022109</td>\n",
-       "      <td>8.834027</td>\n",
+       "      <td>8.839920</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -318,14 +308,14 @@
        "5        vla        25.00           36000            29             50   \n",
        "6        lwa         2.00          100000           256             50   \n",
        "\n",
-       "     rms_Jy   theta_res  \n",
-       "0  0.000378   35.336108  \n",
-       "1  0.000330  883.402699  \n",
-       "2  0.000424    8.834027  \n",
-       "3  0.011076  883.402699  \n",
-       "4  0.000057   13.590811  \n",
-       "5  0.001269   24.538964  \n",
-       "6  0.022109    8.834027  "
+       "     rms_Jy  theta_res_asec  \n",
+       "0  0.000378       35.359681  \n",
+       "1  0.000330      883.992027  \n",
+       "2  0.000424        8.839920  \n",
+       "3  0.011076      883.992027  \n",
+       "4  0.000057       13.599877  \n",
+       "5  0.001269       24.555334  \n",
+       "6  0.022109        8.839920  "
       ]
      },
      "execution_count": 5,
@@ -334,11 +324,11 @@
     }
    ],
    "source": [
-    "# We'll do the calculation assuming 70 MHz and 1 hr, with a bandwidth of 100 MHz\n",
+    "# We'll do the calculation assuming 70 MHz and 1 hr, with a bandwidth of 50 MHz\n",
     "# that's a wavelength of 4.3 meters\n",
-    "nu = 70e6;\n",
-    "c = 2.998e8;\n",
+    "cc_mks = cc / 100. # in mks\n",
     "observatories = {}\n",
+    "this_nu = NU_FIDUCIAL\n",
     "for ii, observatory in enumerate(observatory_data.telescope):\n",
     "    this_observatory = {}\n",
     "    for this_property in observatory_data:\n",
@@ -346,10 +336,10 @@
     "            continue\n",
     "        this_observatory[this_property] = observatory_data[this_property].iloc[ii]\n",
     "    bmax = this_observatory['max_baseline_m'] # in m\n",
-    "    theta = c/(nu*bmax)\n",
+    "    theta = cc_mks / (this_nu * bmax)\n",
     "    theta_asec = theta * 180. * 3600. / np.pi\n",
-    "    observatory_data.loc[ii, 'theta_res'] = theta_asec\n",
-    "    observatory_data.loc[ii, 'rms_Jy'] = rms_Jy(this_observatory, DURATION, nu=NU_FIDUCIAL)\n",
+    "    observatory_data.loc[ii, 'theta_res_asec'] = theta_asec\n",
+    "    observatory_data.loc[ii, 'rms_Jy'] = rms_Jy(this_observatory, DURATION, nu=this_nu)\n",
     "    observatories[observatory] = this_observatory\n",
     "#observatories\n",
     "observatory_data"
@@ -482,7 +472,7 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -493,7 +483,7 @@
        "      <th>num_antennas</th>\n",
        "      <th>bandwidth_MHz</th>\n",
        "      <th>rms_Jy</th>\n",
-       "      <th>theta_res</th>\n",
+       "      <th>theta_res_asec</th>\n",
        "      <th>conf_mJy_per_beam</th>\n",
        "      <th>conf_mJy_per_beam_highres</th>\n",
        "    </tr>\n",
@@ -507,7 +497,7 @@
        "      <td>30</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000378</td>\n",
-       "      <td>35.336108</td>\n",
+       "      <td>35.359681</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -519,7 +509,7 @@
        "      <td>350</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000330</td>\n",
-       "      <td>883.402699</td>\n",
+       "      <td>883.992027</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -531,7 +521,7 @@
        "      <td>44</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000424</td>\n",
-       "      <td>8.834027</td>\n",
+       "      <td>8.839920</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -543,7 +533,7 @@
        "      <td>128</td>\n",
        "      <td>50</td>\n",
        "      <td>0.011076</td>\n",
-       "      <td>883.402699</td>\n",
+       "      <td>883.992027</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -555,7 +545,7 @@
        "      <td>130000</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>13.590811</td>\n",
+       "      <td>13.599877</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -567,7 +557,7 @@
        "      <td>29</td>\n",
        "      <td>50</td>\n",
        "      <td>0.001269</td>\n",
-       "      <td>24.538964</td>\n",
+       "      <td>24.555334</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -579,7 +569,7 @@
        "      <td>256</td>\n",
        "      <td>50</td>\n",
        "      <td>0.022109</td>\n",
-       "      <td>8.834027</td>\n",
+       "      <td>8.839920</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -597,14 +587,14 @@
        "5        vla        25.00           36000            29             50   \n",
        "6        lwa         2.00          100000           256             50   \n",
        "\n",
-       "     rms_Jy   theta_res  conf_mJy_per_beam  conf_mJy_per_beam_highres  \n",
-       "0  0.000378   35.336108                NaN                        NaN  \n",
-       "1  0.000330  883.402699                NaN                        NaN  \n",
-       "2  0.000424    8.834027                NaN                        NaN  \n",
-       "3  0.011076  883.402699                NaN                        NaN  \n",
-       "4  0.000057   13.590811                NaN                        NaN  \n",
-       "5  0.001269   24.538964                NaN                        NaN  \n",
-       "6  0.022109    8.834027                NaN                        NaN  "
+       "     rms_Jy  theta_res_asec  conf_mJy_per_beam  conf_mJy_per_beam_highres  \n",
+       "0  0.000378       35.359681                NaN                        NaN  \n",
+       "1  0.000330      883.992027                NaN                        NaN  \n",
+       "2  0.000424        8.839920                NaN                        NaN  \n",
+       "3  0.011076      883.992027                NaN                        NaN  \n",
+       "4  0.000057       13.599877                NaN                        NaN  \n",
+       "5  0.001269       24.555334                NaN                        NaN  \n",
+       "6  0.022109        8.839920                NaN                        NaN  "
       ]
      },
      "execution_count": 7,
@@ -659,7 +649,7 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -670,7 +660,7 @@
        "      <th>num_antennas</th>\n",
        "      <th>bandwidth_MHz</th>\n",
        "      <th>rms_Jy</th>\n",
-       "      <th>theta_res</th>\n",
+       "      <th>theta_res_asec</th>\n",
        "      <th>conf_mJy_per_beam</th>\n",
        "      <th>conf_mJy_per_beam_highres</th>\n",
        "    </tr>\n",
@@ -684,7 +674,7 @@
        "      <td>30</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000378</td>\n",
-       "      <td>35.336108</td>\n",
+       "      <td>35.359681</td>\n",
        "      <td>2.228800</td>\n",
        "      <td>12.116642</td>\n",
        "    </tr>\n",
@@ -696,7 +686,7 @@
        "      <td>350</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000330</td>\n",
-       "      <td>883.402699</td>\n",
+       "      <td>883.992027</td>\n",
        "      <td>1393.000000</td>\n",
        "      <td>553582.426265</td>\n",
        "    </tr>\n",
@@ -708,7 +698,7 @@
        "      <td>44</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000424</td>\n",
-       "      <td>8.834027</td>\n",
+       "      <td>8.839920</td>\n",
        "      <td>0.139300</td>\n",
        "      <td>0.119266</td>\n",
        "    </tr>\n",
@@ -720,7 +710,7 @@
        "      <td>128</td>\n",
        "      <td>50</td>\n",
        "      <td>0.011076</td>\n",
-       "      <td>883.402699</td>\n",
+       "      <td>883.992027</td>\n",
        "      <td>1393.000000</td>\n",
        "      <td>553582.426265</td>\n",
        "    </tr>\n",
@@ -732,7 +722,7 @@
        "      <td>130000</td>\n",
        "      <td>50</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>13.590811</td>\n",
+       "      <td>13.599877</td>\n",
        "      <td>0.329704</td>\n",
        "      <td>0.501346</td>\n",
        "    </tr>\n",
@@ -744,7 +734,7 @@
        "      <td>29</td>\n",
        "      <td>50</td>\n",
        "      <td>0.001269</td>\n",
-       "      <td>24.538964</td>\n",
+       "      <td>24.555334</td>\n",
        "      <td>1.074846</td>\n",
        "      <td>3.593414</td>\n",
        "    </tr>\n",
@@ -756,7 +746,7 @@
        "      <td>256</td>\n",
        "      <td>50</td>\n",
        "      <td>0.022109</td>\n",
-       "      <td>8.834027</td>\n",
+       "      <td>8.839920</td>\n",
        "      <td>0.139300</td>\n",
        "      <td>0.119266</td>\n",
        "    </tr>\n",
@@ -774,14 +764,14 @@
        "5        vla        25.00           36000            29             50   \n",
        "6        lwa         2.00          100000           256             50   \n",
        "\n",
-       "     rms_Jy   theta_res  conf_mJy_per_beam  conf_mJy_per_beam_highres  \n",
-       "0  0.000378   35.336108           2.228800                  12.116642  \n",
-       "1  0.000330  883.402699        1393.000000              553582.426265  \n",
-       "2  0.000424    8.834027           0.139300                   0.119266  \n",
-       "3  0.011076  883.402699        1393.000000              553582.426265  \n",
-       "4  0.000057   13.590811           0.329704                   0.501346  \n",
-       "5  0.001269   24.538964           1.074846                   3.593414  \n",
-       "6  0.022109    8.834027           0.139300                   0.119266  "
+       "     rms_Jy  theta_res_asec  conf_mJy_per_beam  conf_mJy_per_beam_highres  \n",
+       "0  0.000378       35.359681           2.228800                  12.116642  \n",
+       "1  0.000330      883.992027        1393.000000              553582.426265  \n",
+       "2  0.000424        8.839920           0.139300                   0.119266  \n",
+       "3  0.011076      883.992027        1393.000000              553582.426265  \n",
+       "4  0.000057       13.599877           0.329704                   0.501346  \n",
+       "5  0.001269       24.555334           1.074846                   3.593414  \n",
+       "6  0.022109        8.839920           0.139300                   0.119266  "
       ]
      },
      "execution_count": 10,
@@ -803,16 +793,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "nu=70e6\n",
-    "c=2.998e8\n",
-    "bmax=25000\n",
-    "theta=c/(nu*bmax)\n"
+    "#nu=70e6\n",
+    "#c=2.998e8\n",
+    "#bmax=25000\n",
+    "#theta=c/(nu*bmax)\n"
    ]
   },
   {
@@ -841,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
