--- a/biblio.bib
+++ b/biblio.bib
@@ -4265,6 +4265,44 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Year = 2006,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1111/j.1365-2966.2006.11074.x}}
 
+@book{condon+ransom2016,
+	Author = {{Condon}, J.~J. and {Ransom}, S.~M.},
+	Publisher = {Princeton Series in Modern Observational Astronomy, Princeton University Press, 2016},
+	Title = {{Essential Radio Astronomy (Princeton Series in Modern Observational Astronomy)}},
+	Year = 2016}
+
+@ARTICLE{Condon2012,
+   author = {{Condon}, J.~J. and {Cotton}, W.~D. and {Fomalont}, E.~B. and 
+	{Kellermann}, K.~I. and {Miller}, N. and {Perley}, R.~A. and 
+	{Scott}, D. and {Vernstrom}, T. and {Wall}, J.~V.},
+    title = "{Resolving the Radio Source Background: Deeper Understanding through Confusion}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1207.2439},
+ keywords = {cosmology: observations, diffuse radiation, galaxies: statistics, radio continuum: galaxies},
+     year = 2012,
+    month = oct,
+   volume = 758,
+      eid = {23},
+    pages = {23},
+      doi = {10.1088/0004-637X/758/1/23},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...758...23C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Condon1974,
+   author = {{Condon}, J.~J.},
+    title = "{Confusion and Flux-Density Error Distributions}",
+  journal = {\apj},
+     year = 1974,
+    month = mar,
+   volume = 188,
+    pages = {279-286},
+      doi = {10.1086/152714},
+   adsurl = {http://adsabs.harvard.edu/abs/1974ApJ...188..279C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{conrath+gautier2000,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2000Icar..144..124C},
@@ -16168,6 +16206,24 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Year = 2003,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1016/S1631-0713(03)00009-9}}
 
+@ARTICLE{Stil2014,
+   author = {{Stil}, J.~M. and {Keller}, B.~W. and {George}, S.~J. and {Taylor}, A.~R.
+	},
+    title = "{Degree of Polarization and Source Counts of Faint Radio Sources from Stacking Polarized Intensity}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1404.1859},
+ keywords = {galaxies: statistics, magnetic fields, methods: data analysis, polarization, radio continuum: galaxies},
+     year = 2014,
+    month = jun,
+   volume = 787,
+      eid = {99},
+    pages = {99},
+      doi = {10.1088/0004-637X/787/2/99},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...787...99S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{stone1973,
 	Author = {{Stone}, P.~H.},
 	Journal = {J. Atmos. Sci},
@@ -17015,6 +17071,78 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Volume = 755,
 	Year = 2012,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/755/1/42}}
+
+@ARTICLE{vanHaarlem2013,
+   author = {{van Haarlem}, M.~P. and {Wise}, M.~W. and {Gunst}, A.~W. and 
+	{Heald}, G. and {McKean}, J.~P. and {Hessels}, J.~W.~T. and 
+	{de Bruyn}, A.~G. and {Nijboer}, R. and {Swinbank}, J. and {Fallows}, R. and 
+	{Brentjens}, M. and {Nelles}, A. and {Beck}, R. and {Falcke}, H. and 
+	{Fender}, R. and {H{\"o}randel}, J. and {Koopmans}, L.~V.~E. and 
+	{Mann}, G. and {Miley}, G. and {R{\"o}ttgering}, H. and {Stappers}, B.~W. and 
+	{Wijers}, R.~A.~M.~J. and {Zaroubi}, S. and {van den Akker}, M. and 
+	{Alexov}, A. and {Anderson}, J. and {Anderson}, K. and {van Ardenne}, A. and 
+	{Arts}, M. and {Asgekar}, A. and {Avruch}, I.~M. and {Batejat}, F. and 
+	{B{\"a}hren}, L. and {Bell}, M.~E. and {Bell}, M.~R. and {van Bemmel}, I. and 
+	{Bennema}, P. and {Bentum}, M.~J. and {Bernardi}, G. and {Best}, P. and 
+	{B{\^i}rzan}, L. and {Bonafede}, A. and {Boonstra}, A.-J. and 
+	{Braun}, R. and {Bregman}, J. and {Breitling}, F. and {van de Brink}, R.~H. and 
+	{Broderick}, J. and {Broekema}, P.~C. and {Brouw}, W.~N. and 
+	{Br{\"u}ggen}, M. and {Butcher}, H.~R. and {van Cappellen}, W. and 
+	{Ciardi}, B. and {Coenen}, T. and {Conway}, J. and {Coolen}, A. and 
+	{Corstanje}, A. and {Damstra}, S. and {Davies}, O. and {Deller}, A.~T. and 
+	{Dettmar}, R.-J. and {van Diepen}, G. and {Dijkstra}, K. and 
+	{Donker}, P. and {Doorduin}, A. and {Dromer}, J. and {Drost}, M. and 
+	{van Duin}, A. and {Eisl{\"o}ffel}, J. and {van Enst}, J. and 
+	{Ferrari}, C. and {Frieswijk}, W. and {Gankema}, H. and {Garrett}, M.~A. and 
+	{de Gasperin}, F. and {Gerbers}, M. and {de Geus}, E. and {Grie{\ss}meier}, J.-M. and 
+	{Grit}, T. and {Gruppen}, P. and {Hamaker}, J.~P. and {Hassall}, T. and 
+	{Hoeft}, M. and {Holties}, H.~A. and {Horneffer}, A. and {van der Horst}, A. and 
+	{van Houwelingen}, A. and {Huijgen}, A. and {Iacobelli}, M. and 
+	{Intema}, H. and {Jackson}, N. and {Jelic}, V. and {de Jong}, A. and 
+	{Juette}, E. and {Kant}, D. and {Karastergiou}, A. and {Koers}, A. and 
+	{Kollen}, H. and {Kondratiev}, V.~I. and {Kooistra}, E. and 
+	{Koopman}, Y. and {Koster}, A. and {Kuniyoshi}, M. and {Kramer}, M. and 
+	{Kuper}, G. and {Lambropoulos}, P. and {Law}, C. and {van Leeuwen}, J. and 
+	{Lemaitre}, J. and {Loose}, M. and {Maat}, P. and {Macario}, G. and 
+	{Markoff}, S. and {Masters}, J. and {McFadden}, R.~A. and {McKay-Bukowski}, D. and 
+	{Meijering}, H. and {Meulman}, H. and {Mevius}, M. and {Middelberg}, E. and 
+	{Millenaar}, R. and {Miller-Jones}, J.~C.~A. and {Mohan}, R.~N. and 
+	{Mol}, J.~D. and {Morawietz}, J. and {Morganti}, R. and {Mulcahy}, D.~D. and 
+	{Mulder}, E. and {Munk}, H. and {Nieuwenhuis}, L. and {van Nieuwpoort}, R. and 
+	{Noordam}, J.~E. and {Norden}, M. and {Noutsos}, A. and {Offringa}, A.~R. and 
+	{Olofsson}, H. and {Omar}, A. and {Orr{\'u}}, E. and {Overeem}, R. and 
+	{Paas}, H. and {Pandey-Pommier}, M. and {Pandey}, V.~N. and 
+	{Pizzo}, R. and {Polatidis}, A. and {Rafferty}, D. and {Rawlings}, S. and 
+	{Reich}, W. and {de Reijer}, J.-P. and {Reitsma}, J. and {Renting}, G.~A. and 
+	{Riemers}, P. and {Rol}, E. and {Romein}, J.~W. and {Roosjen}, J. and 
+	{Ruiter}, M. and {Scaife}, A. and {van der Schaaf}, K. and {Scheers}, B. and 
+	{Schellart}, P. and {Schoenmakers}, A. and {Schoonderbeek}, G. and 
+	{Serylak}, M. and {Shulevski}, A. and {Sluman}, J. and {Smirnov}, O. and 
+	{Sobey}, C. and {Spreeuw}, H. and {Steinmetz}, M. and {Sterks}, C.~G.~M. and 
+	{Stiepel}, H.-J. and {Stuurwold}, K. and {Tagger}, M. and {Tang}, Y. and 
+	{Tasse}, C. and {Thomas}, I. and {Thoudam}, S. and {Toribio}, M.~C. and 
+	{van der Tol}, B. and {Usov}, O. and {van Veelen}, M. and {van der Veen}, A.-J. and 
+	{ter Veen}, S. and {Verbiest}, J.~P.~W. and {Vermeulen}, R. and 
+	{Vermaas}, N. and {Vocks}, C. and {Vogt}, C. and {de Vos}, M. and 
+	{van der Wal}, E. and {van Weeren}, R. and {Weggemans}, H. and 
+	{Weltevrede}, P. and {White}, S. and {Wijnholds}, S.~J. and 
+	{Wilhelmsson}, T. and {Wucknitz}, O. and {Yatawatta}, S. and 
+	{Zarka}, P. and {Zensus}, A. and {van Zwieten}, J.},
+    title = "{LOFAR: The LOw-Frequency ARray}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1305.3550},
+ primaryClass = "astro-ph.IM",
+ keywords = {instrumentation: interferometers, radio continuum: general, radio lines: general, dark ages, reionization, first stars, telescopes},
+     year = 2013,
+    month = aug,
+   volume = 556,
+      eid = {A2},
+    pages = {A2},
+      doi = {10.1051/0004-6361/201220873},
+   adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...556A...2V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @article{vanzuilen_et_al2002,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
